@@ -1083,6 +1083,9 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Corrected a critical bug that prevent recvfrom from receiving packets from
 	  any remote UDP port.
 	* NSH: Add hexadecimal dump command (xd)
+	* Fixed several critical bugs with regard to fat reading and writing and FAT12
+	  accesses.  Basically the FAT FS only worked with my tiny test files and test
+	  cases.  A lot of stronger FAT tested is needed!!
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
